# discord-random-quote-widget

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
resources/: quotes.json
src/: main.cpp
